--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,10 @@ dependencies {
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
 
+    //SpeedDialView
+    implementation "com.leinardi.android:speed-dial:3.1.1"
 
+    // Normal Stuff
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
